--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,10 @@
 PORT=5000
-DB_URL=mongodb+srv://yagoda:yagoda020@cluster0.zvshrai.mongodb.net/?retryWrites=true&w=majority
+DB_URL=mongodb+srv://yagoda:yagoda020@cluster0.zvshrai.mongodb.net/
 JWT_ACCESS_SECRET=jwt-secret-key
 JWT_REFRESH_SECRET=jwt-refresh-secret-key
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+SMTP_USER=maksim82020@gmail.com
+SMTP_PASSWORD=vaqw ipaf acus zjcm
+API_URL=http://localhost:5000
+CLIENT_URL=http://localhost:3000
