--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.4",
+    "mongoose": "^7.6.0",
     "nodemailer": "^6.9.5",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.33.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
